[package]
name = "rustgym-server"
version = "0.1.0"
authors = ["yinchu <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
env_logger = "0.7.0"
actix-files = "0.1.4"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
postgres = "0.15.2"
log = "0.4.8"
dotenv = "0.14.1"
failure = "0.1.5"
actix-session = "0.2.0"
r2d2 = "0.8.5"
diesel_migrations = "1.4.0"
