[package]
name = "rustgym-server"
version = "0.1.0"
authors = ["yinchu <larry.fantasy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
env_logger = "0.7.0"
actix-files = "0.1.4"
postgres = "0.15.2"
log = "0.4.8"
dotenv = "0.14.1"
failure = "0.1.5"
actix-session = "0.2.0"
r2d2 = "0.8.5"
diesel_migrations = "1.4.0"
futures = "0.1.29"
actix-identity = "0.1.0"
sendgrid = "0.9.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
http = "0.1.18"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
time = "0.1.42"
argon2rs = "0.2.5"
rand = "0.7.2"
percent-encoding = "2.1.0"
validator = "0.10.0"
validator_derive = "0.10.0"
